Security refactor: Secure server-side Gemini API proxy with environment variables